# PT-P710BT-Label-GUI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/iterate-build/: SKILL.md
debian/: changelog  control  pt-p710bt-label-gui.desktop  pt-p710bt-label-gui.install  rules
planning/decisions/: 001-gui-framework.md  002-shell-out-vs-reimplement.md
planning/sprints/active/: v0.1-mvp.md  v1-mvp.md
src/pt_p710bt_label_gui/: app.py  batch_tab.py  cups_print.py  font_install_dialog.py  font_installer.py  font_picker.py  fonts.py  fonts_tab.py  ptouch.py  ptouch_nb.py
src/pt_p710bt_label_gui/_vendor/ptouch/: __init__.py  __main__.py  connection.py  printer.py  printers.py
