[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pt-p710bt-label-gui"
version = "0.3.0"
description = "Qt6 GUI wrapper around ptouch-print for the Brother PT-P710BT label printer (Linux/KDE)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Daniel Rosehill", email = "daniel@danielrosehill.co.il" }]
license = { text = "MIT" }
dependencies = [
    "PyQt6>=6.6",
    "Pillow",
    "pyusb",
    "packbits",
]

[project.scripts]
pt-p710bt-label-gui = "pt_p710bt_label_gui.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pt_p710bt_label_gui*"]

[tool.setuptools.package-data]
"pt_p710bt_label_gui._vendor.ptouch" = ["LICENSE"]
